--- a/download/k1901/index.html
+++ b/download/k1901/index.html
@@ -150,11 +150,11 @@
 		
 			<section>
 	    <div class="container text-center">
-				<h2>Namib GNU/Linux Gnome 18.02</h2>
+				<h2>Namib GNU/Linux Kde 19.01</h2>
 				<hr class="star-primary" />
-                <a href="https://www.namiblinux.org//img/editions/g1802-full.png" target="_blank"><img src="https://www.namiblinux.org//img/editions/g1802.png" class="img-responsive img-centered" alt=""></a>
+                <a href="https://www.namiblinux.org//img/editions/k1808-full.png" target="_blank"><img src="https://www.namiblinux.org//img/editions/k1808.png" class="img-responsive img-centered" alt=""></a>
 				<br/>
-                <p>This edition of Namib comes with Gnome.</p>
+                <p>This edition of Namib comes with Kde.</p>
                 <p></p>
 
 								<h2>Download</h2>
@@ -172,12 +172,12 @@
 											</div>
 											<div class="bottom">
 												<div style="margin-top: auto; margin-bottom: 10px;">
-													<a href="https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Gnome/namib-gnome-1802_x86_64.iso" class="btn btn-primary btn-xl" target="_blank" >Download on Sourceforge</a>
-													<p> <a href="https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Gnome/namib-gnome-1802_x86_64.iso.torrent" target="_blank">Download Torrent</a></p>
+													<a href="https://sourceforge.net/projects/namib-gnu-linux/files/release/19.01/Kde/namib-kde-1901_x86_64.iso" class="btn btn-primary btn-xl" target="_blank" >Download on Sourceforge</a>
+													<p> <a href="https://sourceforge.net/projects/namib-gnu-linux/files/release/19.01/Kde/namib-kde-1901_x86_64.iso.torrent" target="_blank">Download Torrent</a></p>
 												<div>
 												<div style="margin-top: auto; margin-bottom: 10px; font-size: 12px;">
-													 <a href="https://sourceforge.net/projects/namib-gnu-linux/files/release/18.02/Gnome/namib-gnome-1802_x86_64.iso.sig" target="_blank">Download GPG signature</a><br/>
-													SHA1: 00ca5a6d9f7075933132b4106b6edbb742c04fe7
+													 <a href="https://sourceforge.net/projects/namib-gnu-linux/files/release/19.01/Kde/namib-kde-1901_x86_64.iso.sig" target="_blank">Download GPG signature</a><br/>
+													SHA1: 0aac49a8bfe232eefa859010faf6860631b71366
 												<div>
 											</div>
 								    </div>
@@ -191,12 +191,12 @@
 											</div>
 											<div class="bottom">
 												<div style="margin-top: auto; margin-bottom: 10px;">
-													<a href="https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Gnome/namib-gnome-1802_x86_64.iso" class="btn btn-primary btn-xl" target="_blank" >Download on OSDN</a>
-													<p> <a href="https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Gnome/namib-gnome-1802_x86_64.iso.torrent" target="_blank">Download Torrent</a></p>
+													<a href="https://osdn.net/projects/namib-gnu-linux/storage/release/19.01/Kde/namib-kde-1901_x86_64.iso" class="btn btn-primary btn-xl" target="_blank" >Download on OSDN</a>
+													<p> <a href="https://osdn.net/projects/namib-gnu-linux/storage/release/19.01/Kde/namib-kde-1901_x86_64.iso.torrent" target="_blank">Download Torrent</a></p>
 												<div>
 												<div style="margin-top: auto; margin-bottom: 10px; font-size: 12px;">
-													 <a href="https://osdn.net/projects/namib-gnu-linux/storage/release/18.02/Gnome/namib-gnome-1802_x86_64.iso.sig" target="_blank">Download GPG signature</a><br/>
-													SHA1: 00ca5a6d9f7075933132b4106b6edbb742c04fe7
+													 <a href="https://osdn.net/projects/namib-gnu-linux/storage/release/19.01/Kde/namib-kde-1901_x86_64.iso.sig" target="_blank">Download GPG signature</a><br/>
+													SHA1: 0aac49a8bfe232eefa859010faf6860631b71366
 												<div>
 											</div>
 								    </div>
